# psp-template

./: Cargo.toml  README.md  cargo-generate.toml  package.json
circuit/: {{circom-name}}.light
programs/{{project-name}}/: Cargo.toml
programs/{{project-name}}/src/: lib.rs  processor.rs
psp-template/: cargo-generate.toml  package.json
psp-template/circuits/circuit_psp/: {{circom-name}}.light
psp-template/programs_circom/{{project-name}}/src/: utils.rs
psp-template/programs_psp/{{project-name}}/: Cargo.toml
psp-template/programs_psp/{{project-name}}/src/: lib.rs  processor.rs  psp_accounts.rs
psp-template/tests_circom/: {{project-name}}.ts
tests/: {{project-name}}.ts
