[package]
name = "{{rust-name}}"
version = "0.1.0"
description = "Created with Light Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "{{rust-name}}"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
merkle_tree_program = { git = "https://github.com/lightprotocol/light-protocol", features = ["cpi"], rev = "a76187f450cb946881e2ca598027dfa850acaa38" }
verifier_program_two = { git = "https://github.com/lightprotocol/light-protocol", features = ["cpi"], rev = "a76187f450cb946881e2ca598027dfa850acaa38" }
light-macros = "0.1.0"
light-verifier-sdk = { git = "https://github.com/lightprotocol/light-protocol", rev = "a76187f450cb946881e2ca598027dfa850acaa38" }
solana-program = "1.15.2"
groth16-solana = "0.0.1"
