[package]
name = "{{rust-name}}"
version = "0.1.0"
description = "Created with Light Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "{{rust-name}}"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
merkle_tree_program = { git = "https://github.com/lightprotocol/light-protocol", features = ["cpi"], rev = "fbff66b2936a36fe011e400fb3667ec1e4dea2d9" }
verifier_program_two = { git = "https://github.com/lightprotocol/light-protocol", features = ["cpi"], rev = "fbff66b2936a36fe011e400fb3667ec1e4dea2d9" }
light-macros = "0.1.0"
light-verifier-sdk = { git = "https://github.com/lightprotocol/light-protocol", rev = "fbff66b2936a36fe011e400fb3667ec1e4dea2d9" }
solana-program = "1.16.4"
groth16-solana = "0.0.2"
